Создание и подключение файла стилей. Подключение шрифтов и примение к их к тексту.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Тестовый сайт</title>
 </head>
 <body>
     <header>
         <div>
             <img>
-            <span>app.creation</span>
+            <span class="logo">app.creation</span>
         </div>
-        <nav>
+        <nav class="menu">
             <a href="#">start</a>
             <a href="#">services</a>
             <a href="#">about</a>
@@ -20,9 +22,9 @@
     </header>
     <section>
         <main>
-            <h1>Building an App Without Design Expertise?</h1>
-            <p>I help tech startups design better digital products without hiring a full-time designer</p>
-            <button>Schedule free consultation</button>
+            <h1 class="title">Building an App Without Design Expertise?</h1>
+            <p class="text">I help tech startups design better digital products without hiring a full-time designer</p>
+            <button class="button">Schedule free consultation</button>
         </main>
         <div>
             <img>
