--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 </head>
 <body>
     <header>
-        <div>
-            <img>
-            <span class="logo">app.creation</span>
+        <div class="logo">
+            <img class="logo__image" src="" alt="">
+            <span class="logo__title">app.creation</span>
         </div>
         <nav class="menu">
-            <a href="#">start</a>
-            <a href="#">services</a>
-            <a href="#">about</a>
-            <a href="#">blog</a>
-            <a href="#">contact us</a>
+            <a class="menu__item" href="#">start</a>
+            <a class="menu__item" href="#">services</a>
+            <a class="menu__item" href="#">about</a>
+            <a class="menu__item" href="#">blog</a>
+            <a class="menu__item" href="#">contact us</a>
         </nav>
     </header>
-    <section>
-        <main>
-            <h1 class="title">Building an App Without Design Expertise?</h1>
-            <p class="text">I help tech startups design better digital products without hiring a full-time designer</p>
-            <button class="button">Schedule free consultation</button>
+    <section class="main-section">
+        <main class="main-content">
+            <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+            <p class="main-content__text">I help tech startups design better digital products without hiring a full-time designer</p>
+            <button class="main-content__button">Schedule free consultation</button>
         </main>
-        <div>
-            <img>
+        <div class="image-content">
+            <img class="image-content__image" src="" alt="">
         </div>
     </section>
 </body>
