--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Тестовый сайт</title>
 </head>
 <body>
-    <header>
+    <div class="wrapper">
+      <header class="header">
         <div class="logo">
             <img class="logo__image" src="" alt="">
             <span class="logo__title">app.creation</span>
@@ -19,8 +20,8 @@
             <a class="menu__item" href="#">blog</a>
             <a class="menu__item" href="#">contact us</a>
         </nav>
-    </header>
-    <section class="main-section">
+      </header>
+      <section class="main-section">
         <main class="main-content">
             <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
             <p class="main-content__text">I help tech startups design better digital products without hiring a full-time designer</p>
@@ -29,6 +30,7 @@
         <div class="image-content">
             <img class="image-content__image" src="" alt="">
         </div>
-    </section>
+      </section>
+    </div>
 </body>
 </html>
