--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <title>Тестовый сайт</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
       <header class="header">
         <div class="logo">
-            <img class="logo__image" src="" alt="">
-            <span class="logo__title">app.creation</span>
+            <!--<span class="logo__title">app.creation</span>-->
         </div>
         <nav class="menu">
             <a class="menu__item" href="#">start</a>
