--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="logo">
-            <!--<span class="logo__title">app.creation</span>-->
+            <!--Контейнер для логотипа-->
         </div>
         <nav class="menu">
             <a class="menu__item" href="#">start</a>
@@ -21,16 +21,11 @@
             <a class="menu__item" href="#">contact us</a>
         </nav>
       </header>
-      <section class="main-section">
         <main class="main-content">
-            <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
-            <p class="main-content__text">I help tech startups design better digital products without hiring a full-time designer</p>
-            <button class="main-content__button">Schedule free consultation</button>
+            <h1 class="main-content__title">Building an App <span class="main-content__title_highlight">Without Design Expertise</span>?</h1>
+            <p class="main-content__text">I help tech startups design better digital  products&nbsp;without hiring a full-time designer</p>
+            <a class="main-content__button" href="">Schedule free consultation</a>
         </main>
-        <div class="image-content">
-            <img class="image-content__image" src="" alt="">
-        </div>
-      </section>
     </div>
 </body>
 </html>
