--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
             <!--Контейнер для логотипа-->
         </div>
         <nav class="menu">
-            <a class="menu__item" href="#">start</a>
+            <a class="menu__item menu__item_start" href="#">start</a>
             <a class="menu__item menu__item_active" href="#">services</a>
-            <a class="menu__item" href="#">about</a>
-            <a class="menu__item" href="#">blog</a>
-            <a class="menu__item" href="#">contact us</a>
+            <a class="menu__item menu__item_about" href="#">about</a>
+            <a class="menu__item menu__item_blog" href="#">blog</a>
+            <a class="menu__item menu__item_contact" href="#">contact us</a>
         </nav>
       </header>
         <main class="main-content">
             <h1 class="main-content__title">Building an App <span class="main-content__title_highlight">Without Design Expertise</span>?</h1>
-            <p class="main-content__text">I help tech startups design better digital  products&nbsp;without hiring a full-time designer</p>
+            <p class="main-content__text">I help tech startups design better digital products&nbsp;without hiring a full-time designer</p>
             <a class="main-content__button" href="">Schedule free consultation</a>
         </main>
     </div>
+    <footer class="footer">
+        <div class="footer__item"></div>
+        <div class="footer__item"></div>
+        <div class="footer__item"></div>
+    </footer>
 </body>
 </html>
