Анимирование логотипа с использованием @keyframes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="wrapper">
       <header class="header">
         <div class="logo">
-<!--Контейнер для логотипа-->
+            <div class="logo__blue"></div>
+            <div class="logo__light-blue"></div>
+            <span class="logo__text">app.creation</span>
         </div>
 <!--Габмургер меню-->
         <div class="hamburger-menu">
